# ray_tracing_owe

./: .gitignore  README.md
oneweekend/: Cargo.toml  ray.rs  vec3.rs
oneweekend/ch1/: hello_image.rs
oneweekend/ch2/: Vec3.rs  vec3.rs  vec_image.rs
oneweekend/ch3/: .gradient.rs.swp  gradient.rs
oneweekend/ch4/: sphere.rs
oneweekend/ray/: Cargo.toml
oneweekend/ray/src/: ray.rs
oneweekend/src/ch2/: vec_image.rs
oneweekend/src/ch3/: gradient.rs
oneweekend/src/ch4/: sphere.rs
oneweekend/tests/: tests.rs
oneweekend/vec3/: Cargo.toml
oneweekend/vec3/src/: vec3.rs
